tests-integration/tests/roundtrip/invalid/semantic/duplicate_var_declaration/02/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic_errors/duplicate_var_declaration_02/duplicate_var_declaration_02.essence:3:15:
  |
3 | such that x = 1
  |               ^
Type error:
	Expected: bool
	Got: int

